--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ django-axes = "^5.3.1"
 
 [tool.poetry.dev-dependencies]
 flake8 = "^3.7.9"
+autopep8 = "^1.5.2"
 
 [build-system]
 requires = ["poetry>=0.12"]
