--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ django = "2.2.11"
 python-decouple = "^3.3"
 dj-database-url = "^0.5.0"
 django-axes = "^5.3.1"
+psycopg2-binary = "^2.8.6"
 
 [tool.poetry.dev-dependencies]
 flake8 = "^3.7.9"
