--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,11 +11,11 @@ django_summernote = "^0.8.11"
 pillow = "^7.1.2"
 django-crispy-forms = "^1.9.0"
 requests = "^2.23.0"
-django = "2.2.11"
 python-decouple = "^3.3"
 dj-database-url = "^0.5.0"
 django-axes = "^5.3.1"
 psycopg2-binary = "^2.8.6"
+Django = "3.2"
 
 [tool.poetry.dev-dependencies]
 flake8 = "^3.7.9"
