--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ python-decouple = "^3.3"
 dj-database-url = "^0.5.0"
 django-axes = "^5.3.1"
 psycopg2-binary = "^2.8.6"
+mysqlclient = "^2.0.3"
 
 [tool.poetry.dev-dependencies]
 flake8 = "^3.7.9"
